--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </li>
                 <li class="contacts-item">
                     <a class="contacts-link link" href="tel:+380961111111">
-                        <svg class="contacts-link-icon" width="16" height="12">
+                        <svg class="contacts-link-icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11
                     </a>
@@ -337,7 +337,7 @@
                     </address>
                 </div>
                 <div class="footer-soc">
-                    <h2 class="footer-soc-title">Присоединяйтесь</h2>
+                    <p class="footer-soc-title">Присоединяйтесь</p>
             
                     <ul class="footer-soc-list list">
                         <li class="footer-soc-item">
