--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
                 </li>
                 <li class="contacts-item">
                     <a class="contacts-link link" href="tel:+380961111111">
-                        <svg class="contacts-link-icon" width="16" height="12">
+                        <svg class="contacts-link-icon" width="10" height="16">
                             <use href="./images/icons.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11
                     </a>
@@ -63,7 +63,7 @@
                 </ul>
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-1.jpg" alt="Ноутбук" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Технокряк</h2>
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-2.jpg" alt="Баскетболисты" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h2>
@@ -81,7 +81,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-3.jpg" alt="Логотип ресторана" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Ресторан Seafood</h2>
@@ -90,7 +90,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-4.jpg" alt="Наушники" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Проект Prime</h2>
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-5.jpg" alt="Коробки" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Проект Boxes</h2>
@@ -108,7 +108,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-6.jpg" alt="Монитор" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Inspiration has no Borders</h2>
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-7.jpg" alt="Книга" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Издание Limited Edition</h2>
@@ -126,7 +126,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-8.jpg" alt="Этикетка" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Проект LAB</h2>
@@ -135,7 +135,7 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="link">
+                        <a href="" class="portfolio-link link">
                             <img src="./images/portfolio-img-9.jpg" alt="Человек печатает на ноутбуке" width="370" height="294">
                             <div class="name-portfolio">
                                 <h2 class="portfolio-subtitle">Growing Business</h2>
@@ -169,7 +169,7 @@
                     </address>
                 </div>
                 <div class="footer-soc">
-                    <h2 class="footer-soc-title">Присоединяйтесь</h2>
+                    <p class="footer-soc-title">Присоединяйтесь</p>
     
                     <ul class="footer-soc-list list">
                         <li class="footer-soc-item">
